<resources>

    <!-- App Name -->
    <string name="app_name">Barber Booking</string>

    <!-- Facebook API -->
    <string name="facebook_app_id">533315877231595</string>
    <string name="fb_login_protocol_scheme">fb533315877231595</string>


    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Main Activity -->
    <string name="just_skip">or continue with Facebook</string>
    <string name="mobile_login">Continue with mobile number</string>
    <string name="no_login">Continue with mobile number</string>

    <!-- Home Activity -->
    <string name="home">Home</string>

    <!-- Dialog Sheet -->
    <string name="update">Update</string>
    <string name="updated">Updated</string>

    <!-- Home Fragment -->
    <string name="notification">notification</string>
    <string name="booking">Booking</string>
    <string name="history">History</string>
    <string name="look_book">Look Book</string>


    <!-- Booking Activity -->
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="thank_for_booking">Thank you for booking our services !</string>
    <string name="booking_information">Booking information</string>
    <string name="website_salon">https://www.facebook.com/Ahmet.Mandil</string>
    <string name="phone_salon">+970 59-243-5704</string>
    <string name="confirm_booking">Confirm Booking</string>

    <string name="address_bullet">\u2022 Address: </string>
    <string name="time_bullet">\u2022 Time: </string>
    <string name="stylelist_bullet">\u2022 Barber: </string>
    <string name="bullet">\u2022</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>

    <string name="message_welcome">Hey!</string>
    <string name="message_change_booking">
        "Do you want to change booking information ?"
         "\nBecause we will delete your old booking information"
         "\nJust confirm"
    </string>
    <string name="message_delete_booking">
        "Do you want to delete current booking information ?"
         "\nBecause we will delete your old booking information"
         "\nJust confirm"
    </string>
    <string name="salon_information">Salon information</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="new_booking">New Booking</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="general">General</string>
    <string name="clear_history">Clear History</string>
    <string name="language">Language</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="about">About</string>
    <string name="app_version">App Version : "</string>
    <string name="log_out">Log Out</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="select_barber">Select Barber</string>
    <string name="select_salon">Select Salon</string>
    <string name="rating_our_barber">RATING OUR BARBER</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="your_booking">Your booking</string>
    <string name="notifications">Notifications</string>
    <string name="shopping">Shopping</string>
    <string name="cart">Cart</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="current_booking_must_not_be_null">Current Booking must not be null</string>
    <string name="success_delete_info_booking">Success delete information booking</string>
    <string name="booking_info_must_not_be_empty">Booking information must not be empty</string>
    <string name="unable_to_get_last_location">Unable to get last location</string>
    <string name="add_data_successfully">Addedd data successfully</string>
    <string name="book_now">Book now</string>
    <string name="please_wait">Please wait...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="failed_to_sign_in">Failed to sign in</string>
    <string name="current_booking">Current Booking</string>
    <string name="your_booking_information">Your Booking Information</string>
    <string name="salon">Salon</string>
    <string name="barber">Barber</string>
    <string name="time">Time</string>
    <string name="confirm">Confirm</string>
    <string name="cart_empty">Cart empty</string>
    <string name="are_sure_clear_history">Are you sure want to clear history</string>
    <string name="clear_history_success">Clear history Successfully</string>
    <string name="update_name_success">Update name successfully</string>
    <string name="are_sure_logout">Are you sure want to Log Out</string>
    <string name="please_select_salon">Please Select Salon</string>
    <string name="invalid_url">Invalid Url</string>
    <string name="no_app_open_url">No application can handle this request. Please install a web browser</string>
    <string name="new_appoiment_booking">You have a new appoiment for customer hair care with </string>
    <string name="you_have_a_new_booking_from">You have a new Booking from</string>
    <string name="successfully">Booked successfully !</string>
    <string name="hair_cut_booking">Book to cut hair</string>
    <string name="hair_cut_from">Hair Cut From </string>
    <string name="with"> With </string>
    <string name="at"> at </string>
    <string name="address">Address: </string>


    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="turkish">Turkish</string>
    <string name="french">French</string>
    <string name="select_language">Select Language</string>

    <!-- array for select language -->
    <array name="language_selected">
        <item>English</item>
        <item>Arabic</item>
        <item>Turkish</item>
        <item>French</item>
    </array>

    <!-- All Times -->
    <string name="zero">"9:00 - 9:30"</string>
    <string name="one">"9:30 - 10:00"</string>
    <string name="tow">"10:00 - 10:30"</string>
    <string name="three">"10:30 - 11:00"</string>
    <string name="four">"11:00 - 11:30"</string>
    <string name="five">"11:30 - 12:00"</string>
    <string name="six">"12:00 - 12:30"</string>
    <string name="seven">"12:30 - 13:00"</string>
    <string name="eight">"13:00 - 13:30"</string>
    <string name="nine">"13:30 - 14:00"</string>
    <string name="ten">"14:00 - 14:30"</string>
    <string name="eleven">"14:30 - 15:00"</string>
    <string name="twelve">"15:00 - 15:30"</string>
    <string name="thirteen">"15:30 - 16:00"</string>
    <string name="fourteen">"16:00 - 16:30"</string>
    <string name="fifteen">"16:30 - 17:00"</string>
    <string name="sixteen">"17:00 - 17:30"</string>
    <string name="seventeen">"17:30 - 18:00"</string>
    <string name="eighteen">"18:00 - 18:30"</string>
    <string name="nineteen">"18:30 - 19:00"</string>
    <string name="closed">Closed</string>


    <string name="available">Available</string>
    <string name="full">Booked Up</string>
    <string name="deleted_booking">Reservation was deleted</string>
    <string name="error_in_get_salon">Please try again later!</string>
    <string name="added_to_cart">Added To Cart</string>


</resources>
