<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/nav_booking"
        android:title="@string/your_booking"
        android:icon="@drawable/ic_event_note"/>

    <item android:id="@+id/nav_notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notifications"/>

    <item android:id="@+id/nav_shopping"
        android:title="@string/shopping"
        android:icon="@drawable/ic_shopping_basket"/>

    <item android:id="@+id/nav_cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_shopping_cart"/>

    <item android:id="@+id/nav_help"
        android:title="@string/help"
        android:icon="@drawable/ic_help"/>

    <item android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"/>



</menu>