<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:theme="@style/AppTheme"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/linear_main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_booking_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="visible">

            <LinearLayout
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_event_note"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Your Booking Information"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:fontFamily="@font/bellerose"
                        android:layout_marginStart="@dimen/margin4"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address_bullet"/>
                    <TextView
                        android:id="@+id/txt_address_salon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" address salon"
                        android:textStyle="bold"
                        android:fontFamily="@font/bellerose"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_bullet"/>
                    <TextView
                        android:id="@+id/txt_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" time"
                        android:textStyle="bold"
                        android:fontFamily="@font/bellerose"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stylelist_bullet"/>
                    <TextView
                        android:id="@+id/txt_salon_barber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" barber"
                        android:textStyle="bold"
                        android:fontFamily="@font/bellerose"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bullet"/>
                    <TextView
                        android:id="@+id/txt_time_remain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" time remain"
                        android:textStyle="bold"
                        android:fontFamily="@font/bellerose"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_margin="@dimen/margin8">

                    <Button
                        android:id="@+id/btn_change_booking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/change"
                        android:textColor="@color/colorWhite"
                        android:textAllCaps="true"
                        android:fontFamily="@font/bellerose"
                        android:layout_marginEnd="@dimen/margin4"
                        android:background="@color/colorPrimaryDark"/>
                    <Button
                        android:id="@+id/btn_delete_booking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/delete"
                        android:textColor="@color/colorWhite"
                        android:textAllCaps="true"
                        android:fontFamily="@font/bellerose"
                        android:layout_marginStart="@dimen/margin4"
                        android:background="@color/colorPrimaryDark"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>